# fractal-lint

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  fractal_build_lint.py  fractal_commit_lint.py  fractal_lint.py  setup.cfg  test_fractal_build_lint.py  test_fractal_commit_lint.py  test_fractal_lint.py
docs/: build-lint-config.md  scope-resolution.md
