[metadata]
name = fractal-lint
version = 0.6.0

[options]
py_modules =
    fractal_lint
    fractal_commit_lint
    fractal_build_lint
python_requires = >=3.10
install_requires =
    tomli >= 1.1.0; python_version < "3.11"

[options.entry_points]
console_scripts =
    fractal-lint = fractal_lint:main
    fractal-commit-lint = fractal_commit_lint:main
    fractal-build-lint = fractal_build_lint:main
